--- a/src/main/resources/templates/th/fragments/navBar_myPage.html
+++ b/src/main/resources/templates/th/fragments/navBar_myPage.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <div th:fragment="navBar_myPage">
-    <div class="w3-container">
+    <div class="w3-container w3-center">
         <div class="w3-bar">
             <a th:href="@{/member/myBoard}"
                class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-blue w3-hover-text-blue">프로필</a>
