--- a/src/main/resources/templates/th/main/productDetails.html
+++ b/src/main/resources/templates/th/main/productDetails.html
@@ -32,31 +32,18 @@
                         <img class="mySlides" th:src="@{'/uploadImg/'+${product.productMainImg}}"
                              style="width:100%;display:none">
                     </div>
-                    <div th:unless="${product.productMainImg}">
-                        <img class="mySlides" th:src="@{/uploadImg/errorImg/image-not-available.png}"
-                             style="width:100%;display:none">
-                    </div>
+
                     <div th:if="${product.productSubImg1}">
                         <img class="mySlides" th:src="@{'/uploadImg/'+${product.productSubImg1}}" style="width:100%">
                     </div>
-                    <div th:unless="${product.productSubImg1}">
-                        <img class="mySlides" th:src="@{/uploadImg/errorImg/image-not-available.png}"
-                             style="width:100%">
-                    </div>
+
                     <div th:if="${product.productSubImg2}">
                         <img class="mySlides" th:src="@{'/uploadImg/'+${product.productSubImg2}}"
                              style="width:100%;display:none">
                     </div>
-                    <div th:unless="${product.productSubImg2}">
-                        <img class="mySlides" th:src="@{/uploadImg/errorImg/image-not-available.png}"
-                             style="width:100%;display:none">
-                    </div>
+
                     <div th:if="${product.productSubImg3}">
                         <img class="mySlides" th:src="@{'/uploadImg/'+${product.productSubImg3}}"
-                             style="width:100%;display:none">
-                    </div>
-                    <div th:unless="${product.productSubImg3}">
-                        <img class="mySlides" th:src="@{/uploadImg/errorImg/image-not-available.png}"
                              style="width:100%;display:none">
                     </div>
 
@@ -66,48 +53,27 @@
                                  th:src="@{'/uploadImg/'+${product.productMainImg}}" style="width:100%;cursor:pointer"
                                  onclick="currentDiv(1)">
                         </div>
-                        <div class="w3-col s3" th:unless="${product.productMainImg}">
-                            <img class="demo w3-opacity w3-hover-opacity-off"
-                                 th:src="@{/uploadImg/errorImg/image-not-available.png}"
-                                 style="width:100%;cursor:pointer"
-                                 onclick="currentDiv(1)">
-                        </div>
 
                         <div class="w3-col s3" th:if="${product.productSubImg1}">
                             <img class="demo w3-opacity w3-hover-opacity-off"
                                  th:src="@{'/uploadImg/'+${product.productSubImg1}}" style="width:100%;cursor:pointer"
                                  onclick="currentDiv(2)">
                         </div>
-                        <div class="w3-col s3" th:unless="${product.productSubImg1}">
-                            <img class="demo w3-opacity w3-hover-opacity-off"
-                                 th:src="@{/uploadImg/errorImg/image-not-available.png}"
-                                 style="width:100%;cursor:pointer"
-                                 onclick="currentDiv(2)">
-                        </div>
+
 
                         <div class="w3-col s3" th:if="${product.productSubImg2}">
                             <img class="demo w3-opacity w3-hover-opacity-off"
                                  th:src="@{'/uploadImg/'+${product.productSubImg2}}" style="width:100%;cursor:pointer"
                                  onclick="currentDiv(3)">
                         </div>
-                        <div class="w3-col s3" th:unless="${product.productSubImg2}">
-                            <img class="demo w3-opacity w3-hover-opacity-off"
-                                 th:src="@{/uploadImg/errorImg/image-not-available.png}"
-                                 style="width:100%;cursor:pointer"
-                                 onclick="currentDiv(3)">
-                        </div>
+
 
                         <div class="w3-col s3" th:if="${product.productSubImg3}">
                             <img class="demo w3-opacity w3-hover-opacity-off"
                                  th:src="@{'/uploadImg/'+${product.productSubImg3}}" style="width:100%;cursor:pointer"
                                  onclick="currentDiv(4)">
                         </div>
-                        <div class="w3-col s3" th:unless="${product.productSubImg3}">
-                            <img class="demo w3-opacity w3-hover-opacity-off"
-                                 th:src="@{/uploadImg/errorImg/image-not-available.png}"
-                                 style="width:100%;cursor:pointer"
-                                 onclick="currentDiv(4)">
-                        </div>
+
                     </div>
 
                     <input type="hidden" id="productName" th:value="${product.productName}">
@@ -116,7 +82,7 @@
                     <input type="hidden" name="directPayment" th:value="real">
                 </div>
 
-                <div class="col-md-7">
+                <div class="col-md-7 pl-lg-5">
                     <div class="production-item-stats">
                         <h1 class="production-selling-header__title"><p
                                 class="production-selling-header__title__brand-wrap">
@@ -182,113 +148,34 @@
                            aria-controls="pills-contact" aria-selected="false">업체정보</a>
                     </li>
                 </ul>
-                <div class="tab-content" id="pills-tabContent">
+                <div class="tab-content my-4" id="pills-tabContent">
                     <div class="tab-pane fade show active" id="pills-productInfo" role="tabpanel"
                          aria-labelledby="pills-productInfo-tab" th:if="${product.productExpImg}">
                         <img th:src="@{'/uploadImg/'+${product.productExpImg}}" class="d-block w-100" alt="..."></div>
-                    <div class="tab-pane fade show active" id="pills-productInfoError" role="tabpanel"
-                         aria-labelledby="pills-productInfo-tab" th:unless="${product.productExpImg}">
-                        <img th:src="@{/uploadImg/errorImg/image-not-available.png}" class="d-block w-100" alt="...">
-                    </div>
                     <div class="tab-pane fade" id="pills-reviews" role="tabpanel"
                          aria-labelledby="pills-reviews-tab">
-<!--                        <div class="card-columns">-->
-<!--                            <div class="card my-3" style="width: 18rem;" th:each="reviews, iter :${reviewList}">-->
-<!--                                <div th:id="'carouselExampleFade_' + ${iter.count}" class="carousel slide carousel-fade"-->
-<!--                                     data-ride="carousel">-->
-<!--                                    <div class="carousel-inner">-->
-<!--                                        <div class="carousel-item active card-img-top" th:if="${reviews.reviewImg1}">-->
-<!--                                            <img th:src="${reviewUrlImg} + ${reviews.reviewImg1}" class="d-block w-100"-->
-<!--                                                 alt="...">-->
-<!--                                        </div>-->
-<!--                                        <div class="carousel-item active card-img-top"-->
-<!--                                             th:unless="${reviews.reviewImg1}">-->
-<!--                                            <img th:src="@{/uploadImg/errorImg/image-not-available.png}"-->
-<!--                                                 class="d-block w-100"-->
-<!--                                                 alt="...">-->
-<!--                                        </div>-->
-
-<!--                                        <div class="carousel-item card-img-top" th:if="${reviews.reviewImg2}">-->
-<!--                                            <img th:src="${reviewUrlImg} + ${reviews.reviewImg2}" class="d-block w-100"-->
-<!--                                                 alt="...">-->
-<!--                                        </div>-->
-<!--                                        <div class="carousel-item card-img-top" th:unless="${reviews.reviewImg2}">-->
-<!--                                            <img th:src="@{/uploadImg/errorImg/image-not-available.png}"-->
-<!--                                                 class="d-block w-100"-->
-<!--                                                 alt="...">-->
-<!--                                        </div>-->
-
-<!--                                        <div class="carousel-item card-img-top" th:if="${reviews.reviewImg3}">-->
-<!--                                            <img th:src="${reviewUrlImg} + ${reviews.reviewImg3}" class="d-block w-100"-->
-<!--                                                 alt="...">-->
-<!--                                        </div>-->
-<!--                                        <div class="carousel-item card-img-top" th:unless="${reviews.reviewImg3}">-->
-<!--                                            <img th:src="@{/uploadImg/errorImg/image-not-available.png}"-->
-<!--                                                 class="d-block w-100"-->
-<!--                                                 alt="...">-->
-<!--                                        </div>-->
-<!--                                    </div>-->
-<!--                                    <a class="carousel-control-prev"-->
-<!--                                       th:href="@{'#carouselExampleFade_' + ${iter.count}}"-->
-<!--                                       role="button"-->
-<!--                                       data-slide="prev">-->
-<!--                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
-<!--                                        <span class="sr-only">Previous</span>-->
-<!--                                    </a>-->
-<!--                                    <a class="carousel-control-next"-->
-<!--                                       th:href="@{'#carouselExampleFade_' + ${iter.count}}"-->
-<!--                                       role="button"-->
-<!--                                       data-slide="next">-->
-<!--                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
-<!--                                        <span class="sr-only">Next</span>-->
-<!--                                    </a>-->
-<!--                                </div>-->
-<!--                                <div class="card-body">-->
-<!--                                    <h3 class="card-title" th:text="${reviews.memberId}"></h3>-->
-<!--                                    <label>모델명:</label>-->
-<!--                                    <h4 class="card-text" th:text="${reviews.modelName}"></h4>-->
-<!--                                    <label>색상:</label>-->
-<!--                                    <h4 class="card-text" th:text="${reviews.colorName}"></h4>-->
-<!--                                    <p class="card-text" th:text="${reviews.reviewContent}"></p>-->
-<!--                                    <p class="card-text"><small class="text-muted"-->
-<!--                                                                th:text="${reviews.orderConfirmDate}"></small></p>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-
                         <div class="card mb-3" style="max-width: 100%;" th:each="reviews, iter :${reviewList}">
                             <div class="row no-gutters">
                                 <div class="col-md-4">
-                                    <div th:id="'carouselExampleFade_' + ${iter.count}" class="carousel slide carousel-fade"
+                                    <div th:id="'carouselExampleFade_' + ${iter.count}"
+                                         class="carousel slide carousel-fade"
                                          data-ride="carousel">
                                         <div class="carousel-inner">
-                                            <div class="carousel-item active card-img-top" th:if="${reviews.reviewImg1}">
-                                                <img th:src="${reviewUrlImg} + ${reviews.reviewImg1}" class="d-block w-100"
-                                                     alt="...">
-                                            </div>
                                             <div class="carousel-item active card-img-top"
-                                                 th:unless="${reviews.reviewImg1}">
-                                                <img th:src="@{/uploadImg/errorImg/image-not-available.png}"
+                                                 th:if="${reviews.reviewImg1}">
+                                                <img th:src="${reviewUrlImg} + ${reviews.reviewImg1}"
                                                      class="d-block w-100"
                                                      alt="...">
                                             </div>
 
                                             <div class="carousel-item card-img-top" th:if="${reviews.reviewImg2}">
-                                                <img th:src="${reviewUrlImg} + ${reviews.reviewImg2}" class="d-block w-100"
-                                                     alt="...">
-                                            </div>
-                                            <div class="carousel-item card-img-top" th:unless="${reviews.reviewImg2}">
-                                                <img th:src="@{/uploadImg/errorImg/image-not-available.png}"
+                                                <img th:src="${reviewUrlImg} + ${reviews.reviewImg2}"
                                                      class="d-block w-100"
                                                      alt="...">
                                             </div>
 
                                             <div class="carousel-item card-img-top" th:if="${reviews.reviewImg3}">
-                                                <img th:src="${reviewUrlImg} + ${reviews.reviewImg3}" class="d-block w-100"
-                                                     alt="...">
-                                            </div>
-                                            <div class="carousel-item card-img-top" th:unless="${reviews.reviewImg3}">
-                                                <img th:src="@{/uploadImg/errorImg/image-not-available.png}"
+                                                <img th:src="${reviewUrlImg} + ${reviews.reviewImg3}"
                                                      class="d-block w-100"
                                                      alt="...">
                                             </div>
