--- a/src/main/resources/templates/th/member/mypage/info/myAllInfoSettings.html
+++ b/src/main/resources/templates/th/member/mypage/info/myAllInfoSettings.html
@@ -54,7 +54,7 @@
                        aria-controls="nav-myPasswordSettings" aria-selected="false">비밀번호변경</a>
                 </div>
             </nav>
-            <div class="tab-content" id="nav-tabContent">
+            <div class="tab-content my-4" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="nav-myProfile" role="tabpanel"
                      aria-labelledby="nav-myProfile-tab">
                     <div class="container">
