--- a/src/main/resources/templates/th/member/mypage/profile/myBoard.html
+++ b/src/main/resources/templates/th/member/mypage/profile/myBoard.html
@@ -43,6 +43,7 @@
                                                 <span>팔로워
                                                     <span class="highlight" th:text="${followCount}"></span>
                                                 </span>
+                                                </a>
                                             </div>
                                             <div class="profile-info__follow-state__vertical-bar"></div>
                                             <div class="profile-info__follow-state__text">
@@ -50,6 +51,7 @@
                                                 <span>팔로잉
                                                     <span class="highlight" th:text="${followingCount}"></span>
                                                 </span>
+                                                </a>
                                             </div>
                                         </div>
 
@@ -73,7 +75,7 @@
                                 <th:block th:each="photo : ${myphoto}">
                                     <div class="col-4 col-md-3">
                                         <div class="post--cards__item">
-                                            <a th:herf="@{/photodetail/{photoBoardNo}(photoBoardNo=${photo.photoBoardNo})}">
+                                            <a th:href="@{/photodetail/{photoBoardNo}(photoBoardNo=${photo.photoBoardNo})}">
                                                 <img class="post--cards__item__img" th:src="@{'/uploadImg'+${photo.photoImg1}}"
                                                      th:attr="srcset=|@{'/uploadImg'+${photo?.photoImg1}} 1.5x,
                                                               @{'/uploadImg'+${photo?.photoImg1}} 2x,
