--- a/src/main/resources/templates/th/admin/statAdmin/productSalesVolume.html
+++ b/src/main/resources/templates/th/admin/statAdmin/productSalesVolume.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      >
 <head>
     <meta charset="UTF-8">
     <title>니가사는그집</title>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+    <script th:src="@{https://code.jquery.com/jquery-3.3.1.min.js}"></script>
+    <link rel="stylesheet" th:href="@{/css/statAdmin.css}">
 </head>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.2.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-<link rel="stylesheet" th:href="@{/css/statAdmin.css}">
-
-<!-- body@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
-
 <body>
 <div class="container">
     <!-- 차트 div -->
     <!-- 차트 1 -->
     <div>
         <h1> 연도별 매출 </h1>
-        <!--회사명 입력 <input type="text" value="" id="inputSellerName">-->
+        <!--회사명 입력 -->
         <form action="/admin/searchCom" method="get">
             회사명<input name="sellerName" type="text">
             <input type="submit" value="검색">
         </form>
-        <!--<button name="sellerBtn" onsubmit="true" onclick="sellerBtn()">제출</button>-->
+        <form action="/admin/spendingPattern" method="get">
+            <button type="submit" >홈으로</button>
+        </form>
         <!-- 차트 1 -->
         <div class="row-cols-1" id="name" style="width:35%; height:50px">
             <canvas class="chart1" id="myChart" style="width:35%; height:100%; float:left"></canvas>
@@ -37,31 +35,8 @@
             <canvas class="chart3" id="myChart3" style="width:35%; height:100%; float:left; display: none"></canvas>
         </div>
     </div>
-</div>
+
 <script th:inline="javascript">
-
-    function sellerBtn() {
-        var inputSellerName = document.getElementById("inputSellerName").value;
-        console.log("inputSellerName : " + inputSellerName);
-        $.ajax({
-            //console.log("hi");
-            url: "sellerGraphAjax",
-            type: "POST",
-            data: {
-                inputSellerName: inputSellerName
-            },
-            success: function (data) {
-                console.log("suc");
-            },//이제 이값보내서 db 통계 뽑아서 다시 불러와서 2번 그래프에 다시 배열
-            error: function () {
-                alert("test err");
-            }
-        });
-    }
-
-
-
-
 
     var globalGraph2Return;
     var globalGraph3Return;
@@ -79,7 +54,6 @@
     var yerlyQtyArr = new Array();// 판매량
     var yearlyTotalPrice = new Array();    // 총액
     var yearlySellerNameArr = new Array();    // 판매자
-    console.log("len : " + yearlyJsonParse.length + yearlyJsonParse);
     for (var j = 0; j < yearlyJsonParse.length; j++) {
         yearlyYearArr[j] = yearlyJsonParse[j].year;
         yerlyQtyArr[j] = yearlyJsonParse[j].orderQty;
@@ -118,7 +92,6 @@
         }]
     };
 
-
     var monthData; //var monthData = [[${monthJsonText}]];
     var dayData;    //var dayData = [[${dayJsonText}]];
     var monthLabel;
@@ -139,10 +112,8 @@
                     document.getElementById("myChart2").style.display = 'block';
                 } else {
                     console.log("이미 보여져있다");
-                    //document.getElementById("myChart2").style.display = 'none';
                 }
                 var activePoints = myNewChart.getElementsAtEvent(evt); // activePoints선언
-                console.log("activePoints: " + activePoints);
                 if (activePoints[0]) {
                     var chartData = activePoints[0]['_chart'].config.data;
                     var idx = activePoints[0]['_index'];
@@ -155,17 +126,13 @@
                         year: yearLabel,
                         sellerName: sellN
                     }
-                    console.log("product : " + productNo[0]);
-                    console.log("year : " + yearLabel);
                     $.ajax({
-                        //console.log("hi");
                         url: "yearGraphAjax",
                         type: "POST",
                         data: yearform,
                         success: function (data) {
                             // ajax 성공시 chart2() 호출
                             globalGraph2Return = data;
-                            //alert(globalGraph2Return);
                             reload1();
                             chart2();
                         },//이제 이값보내서 db 통계 뽑아서 다시 불러와서 2번 그래프에 다시 배열
@@ -182,7 +149,6 @@
     //2번 차트 ajax@@@@@@@@@@
     function reload1() {
         document.getElementById('myChart2').remove();
-        console.log("reload1");
         var canv1 = document.createElement('canvas');
         canv1.id = 'myChart2';
         document.getElementById('name2').appendChild(canv1);
@@ -190,7 +156,6 @@
 
     function reload2() {
         $('#myChart3').remove();
-        console.log("reload2");
         var canv2 = document.createElement('canvas'); //style="float: left;"
         canv2.id = 'myChart3';
         document.getElementById('name3').appendChild(canv2);
@@ -198,7 +163,6 @@
 
     function chart2() {
 
-        console.log("chart2입니다 :: " + globalGraph2Return);
         var monthlyMonthArr = new Array();
         var monthlyQtyArr = new Array();
         var monthlyTotalPriceArr = new Array();
@@ -207,7 +171,6 @@
             monthlyTotalPriceArr[i] = globalGraph2Return[i].totalPrice;
             monthlyQtyArr[i] = globalGraph2Return[i].orderQty;
         }
-        console.log("monthly : " + monthlyMonthArr + monthlyQtyArr + monthlyTotalPriceArr);
 
         var chart2Data = {
             labels: monthlyMonthArr, // month 들어갈 자리
@@ -235,22 +198,12 @@
             }
 
             var activePoints = chart2.getElementsAtEvent(evt); // aP선언
-            console.log("activePoints: " + activePoints);
             if (activePoints[0]) {
                 var chartData = activePoints[0]['_chart'].config.data;
-                console.log("chartData : " + chartData);
                 var idx = activePoints[0]['_index'];
-                console.log("idx : " + idx);
-
                 monthLabel = chartData.labels[idx];
-                console.log("label : " + monthLabel);
-
                 var value = chartData.datasets[0].data[idx];
-                console.log("value : " + value);     //label : month,
-
                 var url = "http://example.com/?label=" + monthLabel + "&value=" + value;
-                console.log(url);
-
 
                 var monthform = {
                     product: productNo[0],
@@ -258,8 +211,6 @@
                     month: monthLabel,
                     sellerName: sellN
                 }
-                console.log("product : " + productNo[0]);
-                console.log("month : " + monthLabel);
                 $.ajax({
                     url: "monthGraphAjax",
                     type: "POST",
@@ -286,18 +237,14 @@
 
 
     function chart3() {
-        console.log("전역변수차트3변수" + globalGraph3Return);
-
         var dailyDayArr = new Array();
         var dailyQtyArr = new Array();
         var dailyTotalPriceArr = new Array();
         for (var i = 0; i < globalGraph3Return.length; i++) {
             dailyDayArr[i] = globalGraph3Return[i].day;
             dailyTotalPriceArr[i] = globalGraph3Return[i].totalPrice;
-            console.log("컴마 "+numberWithCommas(globalGraph3Return[i].totalPrice));
             dailyQtyArr[i] = globalGraph3Return[i].orderQty;
         }
-        console.log("monthly : " + dailyDayArr + dailyQtyArr + dailyTotalPriceArr);
 
 
         var chart3Data = {
@@ -319,7 +266,6 @@
         });
         chart3Canvas.onclick = function (evt) {
             var activePoints = chart3.getElementsAtEvent(evt); // aP선언
-            console.log("activePoints: " + activePoints);
             if (activePoints[0]) {
                 var chartData = activePoints[0]['_chart'].config.data;
                 var idx = activePoints[0]['_index'];
@@ -328,12 +274,12 @@
                 var value = chartData.datasets[0].data[idx];
 
                 var url = "http://example.com/?label=" + label + "&value=" + value;
-                console.log(url);
             }
         };
     }
 
 
 </script>
+</div>
 </body>
 </html>
