--- a/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
+++ b/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
@@ -8,7 +8,6 @@
     <meta charset="UTF-8">
     <title>소비패턴</title>
     <th:block layout:fragment="css">
-      <!--  <link rel="stylesheet" th:href="@{/css/statAdmin.css}">-->
     </th:block>
 </head>
 <body>
@@ -29,7 +28,6 @@
         <div id="field">
         </div>
 
-        <!-- 차트 지우고 다시 만들어아햐나? -->
         <script th:inline="javascript">
             var jsonData;
             var chart1Data;
@@ -46,7 +44,6 @@
                     return;
                 }
                 var now = new Date();
-                console.log(date1 +""+date2);
                 year = now.getFullYear()
                 month = now.getMonth()+1;
                 if((month+"").length <2){
@@ -58,34 +55,26 @@
                 }
                 var today = year + "" + month + "" + date;
                 var dateSplit1 = date1.split("-");
-                var year1 = dateSplit1[0]; console.log(year1);
-                var month1 = dateSplit1[1]; console.log(month1);
-                var day1 = dateSplit1[2]; console.log(day1);
+                var year1 = dateSplit1[0];
+                var month1 = dateSplit1[1];
+                var day1 = dateSplit1[2];
 
                 var dateSplit2 = date2.split("-");
-                var year2 = dateSplit2[0]; console.log(year2);
-                var month2 = dateSplit2[1]; console.log(month2);
-                var day2 = dateSplit2[2]; console.log(day2);
+                var year2 = dateSplit2[0];
+                var month2 = dateSplit2[1];
+                var day2 = dateSplit2[2];
 
                 var a = year1+month1+day1;
                 var b = year2+month2+day2;
                 var a1 = year1+'-'+month1+'-'+day1;
                 var b1 = year2+'-'+month2+'-'+day2;
-                console.log("a1:"+a1);
                 var dateform = {
-                    /* year1 : year1,
-                     year2 : year2,
-                     month1 : month1,
-                     month2 : month2,
-                     day1 : day1,
-                     day2 : day2*/
+
                     date1 : date1,
                     date2 : date2
 
                 }
-                console.log("1 : "+a+" 2 : "+b+" 오늘 : " +today)
                 if(a>b || a>today){
-
                     alert("안됩니다");
                 }else{
                     $.ajax({
@@ -93,12 +82,9 @@
                         type : "POST",
                         data : dateform,
                         success : function(data){
-                            alert("suc");
-                            console.log("ajax 성공!"+"oldGraph.destroy");
                             jsonData = data
 
                             oldGraph.destroy;
-
                             reloadFunc();
                             drawGraph();
                             drawCanvas();
@@ -117,79 +103,57 @@
             }
 
             function reloadFunc(){
-                console.log("reload");
-                //var ctx = chart1Canvas.getContext('2d');
-                //var myLineChart = new Chart(ctx, config);
-
-                //myLineChart.destroy();
-
 
                 var div = document.getElementById('hoho').innerHTML;
-                console.log("div : " +div);
-                ///document.getElementById('myChart').appendChild(div);
                 $('.spendingPatternGraph').remove();
                 var canv = document.createElement('canvas');
                 canv.id = 'myChart';
                 canv.style='height: 100%; width: 100%';
                 document.getElementById('hoho').appendChild(canv);
-                console.log(canv);
-                //canvas 만들기만 하면 됨
-                /*var div = document.createElement('div');
-                div.innerHTML = document.getElementById('myChart').innerHTML;
-                //$( 'div' ).remove( '#hoho' );
-                alert("리로드");
-                document.getElementById('hoho').appendChild(div);*/
 
-
-
-                //$('#myChart').load(location.href + '#hoho');
             }
             function drawGraph(){
-                //console.log("drawGraph()  실행 !" );
-                //console.log("jsonGraph는?" + jsonData);
                 var json = [[${jsonText}]];
-                //console.log(json);
                 var jsonParse;
                 if(jsonData == null){
                     jsonParse = JSON.parse(json);
                 }else {
                     jsonParse = JSON.parse(jsonData);
                 }
-                //console.log("json? : "+json);
-                //console.log("jsonParse는? : "+jsonParse);
                 var chart1Arr = new Array();
                 var labelElement = new Array();
                 var yearArr = new Array();
                 var yearArr2 = new Array();
                 var productNo = new Array();
-                //var productName = '구매순위';
                 for (var i = 0; i < jsonParse.length; i++) {
                     labelElement[i] = jsonParse[i].memberId;
                     chart1Arr[i] = jsonParse[i].totalPrice;
 
 
-                    //chart1Arr[i] = jsonParse[i].orderQty;
-                    //productNo[i] = jsonParse[i].productNo; // 품목명을 입력 받아서  날짜ㅡㅣ판매량
-                    //yearArr2[i] = jsonParse[i].year;                                        // 날짜를 입력 받아서 품목 ㅡ ㅣ 판매량
-                    //yearArr[i] = jsonParse[i].productionDay;
                 }
-                console.log("char1Arr는 ? : " + chart1Arr);
                 var backC = [
                     'rgba(124, 192, 135, 1)',
                     'rgba(154, 62, 235, 1)',
                     'rgba(154, 62, 35, 1)',
                     'blue',
                     'purple',
-                    'yellow'
+                    'yellow',
+                    'green',
+                    'black',
+                    'white',
+                    'red',
                 ];
-                //borderColor: backgroundColor:
                 var borderC = [
                     'rgba(124, 192, 135, 1)',
                     'rgba(154, 62, 235, 1)',
                     'rgba(154, 62, 35, 1)',
                     'blue',
                     'purple',
-                    'yellow'
+                    'yellow',
+                    'green',
+                    'black',
+                    'white',
+                    'red',
                 ];
                 options = {
                     maintainAspectRatio: true, // default value. false일 경우 포함된 div의 크기에 맞춰서 그려짐.
