--- a/src/main/resources/templates/th/member/mypage/shopping/myOrderList.html
+++ b/src/main/resources/templates/th/member/mypage/shopping/myOrderList.html
@@ -21,11 +21,6 @@
         });
     </script>
 
-    <script>
-        $("#reviewContent-text").click(function() {
-            alert("test");
-        });
-    </script>
 </head>
 <body>
 <div layout:fragment="content">
@@ -189,7 +184,7 @@
                                                                 data-dismiss="modal">
                                                             취소
                                                         </button>
-                                                        <button type="submit" th:onclick="myFunction()" class="btn btn-primary py-1 px-3">저장
+                                                        <button type="submit" class="btn btn-primary py-1 px-3">저장
                                                         </button>
                                                     </div>
                                                 </div>
