--- a/src/main/resources/templates/th/fragments/adminHeader.html
+++ b/src/main/resources/templates/th/fragments/adminHeader.html
@@ -31,7 +31,7 @@
                                 </div>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link" th:href="@{/admin/}" id="navbarDropdown" role="button" aria-haspopup="true"
+                                <a class="nav-link" th:href="@{/admin/productManagement}" id="navbarDropdown" role="button" aria-haspopup="true"
                                    aria-expanded="false">제품관리
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -42,7 +42,7 @@
                             </li>
 
                             <li class="nav-item dropdown">
-                                <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true"
+                                <a class="nav-link" th:href="@{/admin/sellerManagement}" id="navbarDropdown" role="button" aria-haspopup="true"
                                    aria-expanded="false">업체관리
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
