--- a/src/main/resources/templates/th/main/productDetails.html
+++ b/src/main/resources/templates/th/main/productDetails.html
@@ -34,7 +34,7 @@
 
                     <div th:if="${product.productMainImg}">
                         <img class="mySlides" th:src="@{'/uploadImg/'+${product.productMainImg}}"
-                             style="width:100%;display:none">
+                             style="width:100%;">
                     </div>
 
                     <div th:if="${product.productSubImg1}">
